# finary_uapi

./: .all-contributorsrc  .gitignore  LICENSE  README.md  check.sh  credentials.json.tpl  mcp_server.py  mypy.ini  pyproject.toml  real_estates.txt  requirements-tests.txt  requirements.txt  setup.cfg  test.py
.github/: dependabot.yml
.github/workflows/: quality.yml  release.yml  tests.yml
finary_api/: __init__.py  __main__.py  auth.py  bank_account_types.py  constants.py  crypto_chains.py  currencies.py  holdings_accounts.py  institutions.py  portfolio.py  precious_metals.py  securities.py  signin.py  user_cryptos.py  user_fonds_euro.py  user_generic_assets.py  user_holdings_accounts.py  user_me.py  user_precious_metals.py  user_securities.py  user_startups.py  views.py  watches.py
finary_api/importers/: crypto_generic_csv.py  cryptocom.py  stocks_generic_csv.py
finary_uapi/: CONTRIBUTING.md  __init__.py  __main__.py  auth.py  bank_account_types.py  constants.py  crypto_chains.py  currencies.py  generic_asset_categories.py  institutions.py  mcp_server.py  precious_metals.py  real_estates.py  scpis.py  securities.py  sharing.py  signin.py  user_crowdlendings.py  user_cryptos.py  user_fonds_euro.py  user_generic_assets.py  user_holdings_accounts.py  user_me.py  user_organizations.py  user_portfolio.py  user_precious_metals.py  user_real_estates.py  user_scpis.py  user_securities.py  user_startups.py  utils.py  views.py  watches.py
finary_uapi/importers/: crowdlending_generic_csv.py  crypto_generic_csv.py  cryptocom.py  nexo.py  stocks_generic_csv.py
tests/: test_get.py  test_sharing.py  test_utils.py
tests/data/: crowdlendings.csv  cryptos.csv  stocks.csv  stocks.json
