[tool.poetry]
name = "finary-uapi"
version = "0.2.1"
description = "Finary API client and command line tool to interact with your Finary account."
authors = ["lasconic <lasconic@gmail.com>"]
license = "MIT License"
readme = "README.md"
packages = [{include = "finary_uapi"}]

[tool.poetry.dependencies]
python = "^3.10"
docopt = "^0.6.2"
fuzzywuzzy = {version = "^0.18.0", extras = ["speedup"]}
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
black = "24.10.0"
flake8 = "7.1.1"
mypy = "1.11.2"
pdoc3 = "0.11.1"
pydocstyle = "6.3.0"
pytest = "8.3.3"
pytest-cov = "5.0.0"
pytest-dependency = "0.6.0"
responses = "0.25.3"
types-requests = "2.32.0.20240914"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
