[tool.poetry]
name = "finary-uapi"
version = "0.2.1"
description = "Finary API client and command line tool to interact with your Finary account."
authors = ["lasconic <lasconic@gmail.com>"]
license = "MIT License"
readme = "README.md"
packages = [{include = "finary_uapi"}]

[tool.poetry.dependencies]
python = "^3.10"
docopt = "^0.6.2"
fuzzywuzzy = {version = "^0.18.0"}
curl-cffi = ">=0.13,<0.15"

[tool.poetry.group.dev.dependencies]
black = "25.11.0"
flake8 = "7.3.0"
mypy = "1.19.0"
pdoc3 = "0.11.6"
pydocstyle = "6.3.0"
pytest = "9.0.1"
pytest-cov = "7.0.0"
pytest-dependency = "0.6.0"
responses = "0.25.8"
types-requests = "2.32.4.20250913"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
